[project]
name = "my_hairdressing_app"
version = "2021.11"
description = "Organizador de agendas para peluquerías"
readme = "README.md"
requires-python = "==3.8.10"
license = {file = "LICENSE"}
authors = [
    {email = "antoniojr997@gmail.com"},
    {name = "Antonio"}
]
maintainers = [
    {name = "Antonio", email = "antoniojr997@gmail.comv"}
]
classifiers = [
    "Programming Language :: Python"
]

[project.optional-dependencies]
tester = [
    "pytest == 6.2.5",
]
checker = [
    "pyflakes == 2.4.0",
]
managers = [
    "flit == 3.5.1",
    "invoke == 1.6.0",
]

[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"


