[tool.poetry]
name = "my_hairdressing_app"
version = "2021.11"
description = "Organizador de agendas para peluquerías"
authors = ["Antonio Jiménez <antoniojr997@gmail.com>"]
license = "GPL-3.0-or-later"

[tool.poetry.dependencies]
python = "==3.8.10"

[tool.poetry.dev-dependencies]
invoke = "^1.6.0"
pytest = "^6.2.5"
pyflakes = "^2.4.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"


